# TMF-Service-Layer

./: .env.example  Dockerfile  README.md  alembic.ini  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/instructions/: copilot.instructions.md  python.instructions.md
.github/prompts/: document-api.prompt.md  plan.prompt.md
alembic/: env.py
alembic/versions/: 0001_catalog_initial.py  0002_order_initial.py  0003_inventory_initial.py  0004_provisioning_initial.py  0005_qualification_initial.py  0006_assurance_initial.py  0007_testing_initial.py  0008_catalog_tmfc006.py  0009_characteristic_extensions.py  0010_service_dependencies.py  0011_assurance_timestamps_fix.py  0012_testing_timestamps_fix.py  0013_problem_initial.py  0014_commercial_initial.py
docs/: Purpose.md  TMF-reference.md  app-layout.md
docs/plans/: 01 - plan-catalogImplementation.md  02 - plan-serviceOrderManagement.md  03 - plan-phase3ServiceInventory.prompt.md  04 - plan-phase4ServiceActivation.md  05 - plan-phase5ServiceQualification.prompt.md  06 - plan-phase6ServiceAssurance.md  07 - plan-phase7TMF653 Service Test Management.md  Foundation-TMF633-Catalog-MVP.md  (+4 more)
frontend/: assurance-help.html  assurance.html  catalog-help.html  catalog.html  commercial-help.html  commercial.html  datamodel.html  index.html  inventory.html  orders-help.html  orders.html  problems-help.html  problems.html  provisioning-help.html  provisioning.html  qualification-help.html  qualification.html  testing-help.html  testing.html
src/: __init__.py  config.py  conftest.py  main.py
(+162 files in other folders)
